# News-Classification-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  definitions.py  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
baseline_requirements/: data.py  metrics.py  system.py
constants/: constants.py
deployment/: docker-compose.local.yaml  docker-compose.prod.yaml  entrypoint.sh
env/: database.env  proj.env
experiments/: compress_dataset.py
experiments/current_experiment/: compress_dataset.py
experiments/current_experiment/encoders/: encoders.py  encoding.py
experiments/current_experiment/features/: build_features.py  form.py
experiments/current_experiment/models/: Training.ipynb
experiments/current_experiment/notebooks/: Analysis.ipynb  Drift.ipynb  EDA.ipynb  NNTraining.ipynb  Preprocessing.ipynb  Training.ipynb
experiments/current_experiment/reports/: global_report.ipynb  local_report.ipynb
experiments/current_experiment/text_classification/: constants.py  text.py  text_encoding.py
experiments/experiment_1/: compress_dataset.py
experiments/experiment_1/encoders/: encoders.py
experiments/experiment_1/features/: build_features.py
experiments/experiment_1/notebooks/: Drift.ipynb  Training.ipynb
kubernetes/:  application.yml  Ingress.yml  database.yml  maps.yml
model_requirements/: requirements.py
proj_requirements/: dev_requirements.txt  prod_requirements.txt
references/eda/: Analysis.ipynb
references/eda/.ipynb_checkpoints/: Analysis-checkpoint.ipynb
rest/: controllers.py  exc_handlers.py  settings.py  system_metrics.py
src/: exceptions.py
src/dataset/: text_dataset.py
src/drift/: detection.py
src/encoders/: encoders.py
src/feature_form/: feature_form.py
src/interfaces/: model.py
src/models/: predict_model.py  train_model.py
tests/ml/: test_model.py
tests/rest/: test_controllers.py
(+1 files in other folders)
