[tool.poetry]
name = "news-classification-project"
version = "0.1.0"
description = "News Classification ML Project"
authors = ["Kirill Klimushin"]
readme = "README.md"
packages = [{include = "news_classification_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
line-profiler = "^4.0.3"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
