[tool.poetry]
name = "news-classification-project"
version = "0.1.0"
description = "News Classification ML Project"
authors = ["Kirill Klimushin"]
readme = "README.md"
packages = [{include = "news_classification_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
line-profiler = "^4.0.3"
memory-profiler = "^0.61.0"
fastapi = "^0.100.1"
statsmodels = "^0.14.0"
pytest = "^7.4.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.2"
jupyter = "^1.0.0"
uvicorn = "^0.23.2"
wordcloud = "^1.9.2"
urllib3 = "^2.0.4"
catalyst = "^22.4"
torch = "^2.0.1"
transformers = "^4.31.0"

[tool.pytest.options]
minversion = "7.4.0"
addopts = "-s --junitxml=test_reports/report.xml"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
